--- a/Undervisningsopgaver/babushka/babushka.css
+++ b/Undervisningsopgaver/babushka/babushka.css
@@ -24,12 +24,12 @@ article {
 }
 
 img {
-    max-width: 350px;
+    max-width: 100%;
 }
 
 main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 20px;
     margin-bottom: 10vw;
 }
